--- a/config.toml
+++ b/config.toml
@@ -1,15 +1,14 @@
-# theme.toml template for a Hugo theme
-# See https://github.com/gohugoio/hugoThemes#themetoml for an example
+baseURL = "https://example.com/"
+title = "GitHub Style"
+googleAnalytics = "UA-123-456-789"
+theme = "github-style"
 
-name = "Github Style"
-license = "MIT"
-licenselink = "https://github.com/MeiK2333/github-style/blob/master/LICENSE"
-description = "github-style hugo theme"
-homepage = "https://github.com/MeiK2333"
-tags = ["blog", "google analytics"]
-features = ["google analytics"]
-min_version = "0.41"
-
-[author]
-  name = "MeiK"
-  homepage = "https://github.com/MeiK2333"
+[params]
+  author = "example"
+  description = "example"
+  github = "example"
+  twitter = "example"
+  email = "example@domain.com"
+  utterances = "example/example.github.io"
+  avatar = "/images/avatar.png"
+  url = "https://example.com"
