github style config

--- a/config.toml
+++ b/config.toml
@@ -4,11 +4,11 @@ googleAnalytics = "UA-123-456-789"
 theme = "github-style"
 
 [params]
-  author = "example"
-  description = "example"
-  github = "example"
-  twitter = "example"
-  email = "example@domain.com"
+  author = "yhnu"
+  description = "yhnu's blog"
+  github = "yhnu"
+  twitter = "yhnu"
+  email = "immb@qq.com"
   utterances = "example/example.github.io"
   avatar = "/images/avatar.png"
-  url = "https://example.com"
+  url = "https://yhnu.github.io"
