--- a/qiniu/sync.conf
+++ b/qiniu/sync.conf
@@ -1,5 +1,15 @@
 {
-    "src_dir": "public",
-    "bucket": "yhnu",
-    "overwrite": false
+   "overwrite"          :   true,
+   "rescan_local"         : true,
+   "check_exists"       :   true,
+   "check_hash"         :   true,
+   "check_size"         :   true,
+   "skip_fixed_strings" : ".svn,.git,.gitignore,.gitlab-ci.yml,.vscode-upload.json",
+   "skip_suffixes" : ".DS_Store,.exe,.log",
+   "log_file" : "upload.log",
+   "log_level" : "error",
+   "log_rotate" : 1,
+   "log_stdout" : true,
+   "file_type" : 0
+   "bucket"             :   "yhnu"   
 }
