--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -24,7 +24,7 @@ jobs:
     - name: FixImage
       run: |
         ls -l
-        grep -rl 'src=".*/image-' public/posts/ | xargs sed -i 's;src=".*/image-;src="image-;g'
+        grep -rl 'src=".*/image-' public/ | xargs sed -i 's;src=".*/image-;src="image-;g'
     - name: Deploy
       env:
         ACTIONS_DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
