fix base url https

--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -19,7 +19,7 @@ jobs:
     
     - name: Build
       run: |
-        sed -i 's;baseURL = "http://blog.alphaz.cn/";baseURL = "http://yhnu.github.io/";g' config.toml
+        sed -i 's;baseURL = "http://blog.alphaz.cn/";baseURL = "https://yhnu.github.io/";g' config.toml
         hugo
     
     - name: FixImage
