--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ email: immb@qq.com
 
 avatar: https://avatars2.githubusercontent.com/u/5300359?v=4&s=460
 social:
-  github: https://github.com/sabrinaluo
+  github: https://github.com/yhnu
   weibo: http://weibo.com/206663121
   linkedin:
 
