--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@yhnu/hexo-newpost-pinyin": "^1.0.0",
     "cheerio": "^1.0.0-rc.3",
     "hexo": "^4.0.0",
+    "hexo-deployer-git": "^2.1.0",
     "hexo-enhancer": "^1.0.7",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
