旧的博客迁移

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ gcs: # GOOGLE CUSTOM SEARCH
 baidutongji: # BAIDU TONGJI CODE
 disqus: # DISQUS ID
 
-location: Hong Kong
+location: Chong Qing
 email: immb@qq.com
 
 avatar: http://q68vqxb8c.bkt.clouddn.com/2020_02_27_shu-mei-pai-shi-yong-zhi-nan/20200228122216265.png
